--- a/index.html
+++ b/index.html
@@ -79,13 +79,14 @@
                   <a href="https://new.mta.info/maps" target="_blank">
                     <i class="fa-solid fa-train-subway fa-8x"></i></a>
                 <br>
-                    <span class="icon-captions">Subway Map</span>
+                    <span class="icon-captions">Subway <br> Map</span>
                 </div>
                 <div class="d-flex col-12 col-md-6 col-lg-3 justify-content-center icons">
                   <a href="https://www.nyc.com/visitor_guide/" target="_blank">
-                    <i class="fa-solid fa-map-location-dot fa-8x"></i></a>
+                    <i class="fa-solid fa-map-pin fa-8x"></i></a>
+                    <!-- <i class="fa-solid fa-map-location-dot fa-8x"></i></a> -->
                 <br>
-                    <span class="icon-captions">Visitor Guide</span>
+                    <span class="icon-captions">Visitor <br> Guide</span>
                 </div>
                 <div class="d-flex col-12 col-md-6 col-lg-3 justify-content-center icons">
                   <a href="https://www.clubfreetime.com/new-york-city-nyc/free-events-things-to-do" target="_blank"
@@ -97,7 +98,7 @@
                   <a href="https://www.xe.com/currencyconverter/" target="_blank"
                      <i class="fa-solid fa-dollar-sign fa-8x"></i></a>
                  <br>
-                    <span class="icon-captions">Currency Convertor</span>
+                    <span class="icon-captions">Currency <br> Convertor</span>
                 </div>
               </div>
 
@@ -167,8 +168,7 @@
               <section class="container-fluid form-container">
                 <div class="row">
                   <div class="col">
-                    <h5>Do you have a tip?</h5>
-                    <h5>Fill in the form below</h5>
+                    <h5>Do you have a tip? <br> Fill in the form below</h5>
 
 
                       <form class="other-tips" method="POST" target="_blank" action="https://formdump.codeinstitute.net/">
@@ -208,7 +208,7 @@
 
         <div class="container-fluid gallery-container">
           <div class="row g-3">
-            <h4>new york photos</h4>
+            <h2>new york photos</h2>
             <div class="col-12 col-md-6 col-lg-4">
               <div class="card">
                 <img src="assets/images/central-park.jpg" alt="The fountain and boating lake in Central Park" class="card-img-top">
