--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div id="breakpoints"></div>
         <header>
            <!-- NAVBAR -->
-           <nav class="navbar navbar-expand-lg navbar-dark">
+           <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">thrifty nyc</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
