--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
                     <span class="icon-captions">Visitor <br> Guide</span>
                 </div>
                 <div class="d-flex col-12 col-md-6 col-lg-3 justify-content-center icons">
-                  <a href="https://www.clubfreetime.com/new-york-city-nyc/free-events-things-to-do" target="_blank"
+                  <a href="https://www.clubfreetime.com/new-york-city-nyc/free-events-things-to-do" target="_blank">
                      <i class="fa-regular fa-calendar fa-8x"></i></a>
                 <br>
                      <span class="icon-captions">Calendar</span>
                 </div>
                 <div class="d-flex col-12 col-md-6 col-lg-3 justify-content-center icons">
-                  <a href="https://www.xe.com/currencyconverter/" target="_blank"
+                  <a href="https://www.xe.com/currencyconverter/" target="_blank">
                      <i class="fa-solid fa-dollar-sign fa-8x"></i></a>
                  <br>
                     <span class="icon-captions">Currency <br> Convertor</span>
@@ -109,26 +109,36 @@
                   <h2>new york tips</h2>
                     <div class="col-md-6 free-tips-icons">
                       <h3>free activities</h3>
-                       <h5>Staten Island Ferry&nbsp;<i class="fa-solid fa-ferry"></i></h5> 
+                       <h5>Staten Island Ferry
+                        <a href="https://siferry.com/" target="_blank">
+                        <button type="button" class="btn btn-light" id="tips-buttons">Info</button></a></h5>
                        <p>
                           The Staten Island Ferry gives you amazing close up views of the Statue of Liberty.  
                           It runs 24/7 every 30 minutes (apart from every 15 minutes weekdays during rush hours)
                         </p>
-                        <h5>Walking Tours&nbsp;<i class="fa-solid fa-person-walking"></i></h5>
+                        <h5>Walking Tours
+                          <a href="https://freetoursbyfoot.com/nyc-in-one-day-tour/" target="_blank">
+                            <button type="button" class="btn btn-light" id="tips-buttons">Info</button></a></h5>
                         <p>
                           Enjoy a selection of different walking tours lasting from 2-6 hours covering various areas
                           of New York (but not Manhattan).  Free tours but you can leave a tip.  
                         </p>
-                        <h5>Park&nbsp;<i class="fa-solid fa-tree"></i></h5>
+                        <h5>Park
+                          <a href="https://littleisland.org/" target="_blank">
+                            <button type="button" class="btn btn-light" id="tips-buttons">Info</button></a></h5>
                         <p>
                           Little Island is an artificial island park just off Pier 54 where you can have an audio tour,
                           enjoy the landscape, take a yoga class, relax and watch the sunset,  or attend an event.    
                         </p>
-                        <h5>Films&nbsp;<i class="fa-solid fa-film"></i></h5>
+                        <h5>Films
+                          <a href="https://www.nycgovparks.org/events/free_summer_movies" target="_blank">
+                            <button type="button" class="btn btn-light" id="tips-buttons">Info</button></a></h5>
                         <p>
                           Enjoy an outdoor film at one of the many Manhattan parks from May onwards.  
                         </p>
-                        <h5>Beer Tour&nbsp;<i class="fa-solid fa-beer-mug-empty"></i></h5>
+                        <h5>Beer tour
+                          <a href="https://brooklynbrewery.com/visit-us/brewery-tours/" target="_blank">
+                            <button type="button" class="btn btn-light" id="tips-buttons">Info</button></a></h5>
                         <p>
                           Brookyln Brewery has tours every Sunday from 1-6pm.  No tasting included
                           but you can buy a drink in the bar.  
@@ -136,12 +146,16 @@
                     </div>
                     <div class="col-md-6 discounted-tips-icons">
                       <h3>discounted activities</h3>
-                        <h5>Shopping&nbsp;<i class="fa-solid fa-shop"></i></h5>  
+                        <h5>Shopping
+                          <a href="https://www.macys.com/" target="_blank">
+                            <button type="button" class="btn btn-light" id="tips-buttons">Info</button></a></h5>
                        <p>
                         Macy’s (the largest store in the USA) offers a Visitor’s Savings pass with 10% discount on many
                         products.  Collect in store on the mezzanine level (you need ID too).  
                         </p>
-                        <h5>Theatre&nbsp;<i class="fa-solid fa-masks-theater"></i></h5>
+                        <h5>Theatre
+                          <a href="https://www.tdf.org/discount-ticket-programs/tkts-by-tdf/" target="_blank">
+                            <button type="button" class="btn btn-light" id="tips-buttons">Info</button></a></h5>
                         <p>
                           Get up to 50% off a Broadway theatre ticket by going to a ticket booth on the day of the show. (You'll
                           need to queue). Also Off Broadways shows are discounted. 
@@ -151,13 +165,17 @@
                           Many museums offer free or pay what you wish entry weekly (often they are closed on a Monday).
                           Look at individual museum websites for more details.    
                         </p>
-                        <h5>Food&nbsp;<i class="fa-solid fa-pizza-slice"></i></h5>
+                        <h5>Food
+                          <a href="https://eatandplaycard.com/destination-new-york-city/" target="_blank">
+                          <button type="button" class="btn btn-light" id="tips-buttons">Info</button></a></h5>
                         <p>
                           For $20 the Eat and Play card offers discounts on food, attractions, shopping and shows. 
                         </p>
-                        <h5>Drinks&nbsp;<i class="fa-solid fa-martini-glass-citrus"></i></h5>
+                        <h5>Drinks
+                          <a href="https://newyorksimply.com/nyc-happy-hours-new-york-city/" target="_blank">
+                            <button type="button" class="btn btn-light" id="tips-buttons">Info</button></a></h5>
                         <p>
-                          Many New York bars off happy hours with big savings. Who doesn't love a cheaper drink?
+                          Many New York bars off happy hours usually between 4-7pm with big savings. Who doesn't love a cheaper drink?
                         </p>
                     </div>
                     </div>
