--- a/index.html
+++ b/index.html
@@ -203,11 +203,11 @@
                         </div>
                         <div class="form-group">
                           <label for="emailaddress">Email address</label>
-                          <input type="email" class="form-control" id="emailaddress" placeholder="name@example.com" required />
+                          <input type="email"  name="email" class="form-control" id="emailaddress" placeholder="name@example.com" required />
                         </div>
                         <div class="form-group">
                           <label for="yourtip">Your tip</label>
-                          <textarea class="form-control" id="yourtip" rows="5"placeholder="Write your tip here" required /></textarea>
+                          <textarea class="form-control" name="yourtip" id="yourtip" rows="5"placeholder="Write your tip here" required /></textarea>
                         </div>
                         <div class="form-check form-check-inline">
                           <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
@@ -331,8 +331,6 @@
           </div>
         
     </footer>
-
-
 
     <!-- Bootstrap and Font Awesome scripts-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
