--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
             </div>
             <div class="col">
               <h6>Follow</h6>
-              <ul class="list-inline social-links">
+              <ul class="social-links">
                 <li>
                   <a href="https://facebook.com" target="_blank">
                     <i class="fa-brands fa-facebook" style="color:white" aria-hidden="true"></i>
@@ -310,9 +310,10 @@
                 <li>
                   <a href="https://twitter.com" target="_blank">
                     <i class="fa-brands fa-x-twitter" style="color:white" aria-hidden="true"></i>
-                      <span class="sr-only">Twitter</span>
+                      <span class="sr-only">Twitter</span> 
                 </a>
                 </li>
+                <br>
                 <li>
                   <a href="https://instagram.com" target="_blank">
                     <i class="fa-brands fa-instagram" style="color:white" aria-hidden="true"></i>
